# devops-project

./: .dockerignore  .flake8  .gitignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.heartbeat  Dockerfile.recovery  Dockerfile.worker  README.md  docker-compose.yml  main.py  package.json  prometheus.yml  pyproject.toml  requirements-dev.txt  test_results.txt
.github/workflows/: ci.yml
config/: constants.py
core/: metrics.py
db/: connection.py
frontend/: index.html
k8s/: configmap.yaml  deployment.yaml  service.yaml
models/: model.py
recovery/: recovery.py
routers/: learning.py  task.py  workers.py
scheduling/: __init__.py  estimator.py  learner.py  rl_agent.py
tests/: postman-collection.json  test_api.py  test_rl.py
workers/: heartbeat.py  worker.py
